# OpenBench

./: .gitignore  README.md  pyproject.toml
.omx/plans/: prd-openbench-mvp.md  test-spec-openbench-mvp.md
docs/: index.html
docs/latest/: manifest.json
docs/research/: 2026-04-07-coding-agent-benchmark-landscape.md
docs/specs/: 2026-04-06-openbench-design.md  benchmark-rules.md
openbench/: __init__.py  cli.py  config.py  models.py  registry.py  runner.py  workspace.py
openbench/agents/: __init__.py  base.py  claude_native.py  codex_native.py  omc.py  omx.py
openbench/metrics/: __init__.py  statistics.py  store.py
openbench/reporters/: __init__.py  html_reporter.py  models.py  parser.py
openbench/suites/: __init__.py  base.py
openbench/utils/: __init__.py  process.py
tasks/practical/: suite.yaml
tasks/runtime/: suite.yaml
tasks/swe-bench/: suite.yaml
tests/: conftest.py
tests/cli/: test_doctor_command.py  test_list_command.py  test_practical_task_commands.py  test_report_command.py  test_run_command.py
tests/integration/: test_cli_run_runtime.py  test_practical_result_persistence.py  test_practical_task_execution.py  test_report_failures.py  test_report_generation.py  test_runner_runtime_flow.py
tests/smoke/: test_practical_task_smoke.py  test_report_smoke.py  test_runtime_smoke.py
tests/unit/: test_config.py  test_practical_evaluator.py  test_practical_task_contract.py  test_practical_task_schema.py  test_report_contract.py  test_report_parser.py  test_report_render_context.py  test_result_store.py  test_runtime_suite.py  (+4 more)
(+32 files in other folders)
